feats: Project Description markdown

--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,14 @@
 @import "tailwindcss";
+.w-md-editor-preview ul {
+  list-style-type: disc;
+  padding-left: 1.5rem;
+}
+
+.w-md-editor-preview ol {
+  list-style-type: decimal;
+  padding-left: 1.5rem;
+}
+
+.w-md-editor-preview li {
+  margin-bottom: 0.3rem;
+}
